Fix visitors chart view on mobile

--- a/resources/sass/admin/_imports/_chart.sass
+++ b/resources/sass/admin/_imports/_chart.sass
@@ -4,3 +4,6 @@
     border-radius: .375rem
     &:nth-child(n + 2)
         margin-top: 1rem
+
+.charts canvas
+    min-height: 500px !important
